[package]
name = "waterfall"
version = "0.1.0"
authors = ["Alex Rudy <alex.rudy@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
cursive = "*"
structopt = "0.2"
regex = "1"
lazy_static = "1.2.0"
geometry = { path = "../geometry/" }
cursive_aoc_views = { path = "../cursive_aoc_views" }
itertools = "0.7.11"
